# oncall-agents

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  test_claude.py  test_embeddings.py  test_milvus.py
app/: config.py  main.py
app/agent/: __init__.py  mcp_client.py  rag_agent.py
app/api/: chat.py  ingest.py
app/core/: milvus_client.py
app/services/: vector_store.py
app/tools/: __init__.py  retrieval.py  time_tool.py
claude/: planning.md
docs/: high_cpu.md
mcp_servers/: monitor_server.py
tests/: conftest.py  test_agent.py  test_chat.py  test_dialogue.py  test_ingest.py  test_mcp_server.py  test_tools.py  test_vector_store.py
